--- a/css/style.css
+++ b/css/style.css
@@ -79,8 +79,8 @@ label {
 	padding: 5px 20px;
 	background: #111;
 	border: 1px solid #333;
-  border-left: 0;
-  border-right: 0;
+	border-left: 0;
+	border-right: 0;
 	margin: 10px 0;
 	box-shadow: inset 0 0 5px #000;
 }
@@ -89,8 +89,50 @@ label {
 	color: #555;
 	font-family: 'Monda';
 	padding: 5px;
+	font-size: 1.0em;
 }
 
 .copyright a {
 	color: #886;
+}
+
+@media all and (max-width: 480px) {
+	.col {
+		float: none;
+		margin: 0;
+		text-align: center;
+	}
+
+	.col_4 {
+		width: 100%;
+	}
+
+	.col_8 {
+		width: 100%;
+		padding: 0;
+	}
+
+	.desc {
+		text-align: center;
+	}
+
+	#results {
+		text-align: left;
+		clear: both;
+	}
+
+	input[type='checkbox'], select, label {
+		display: block;
+		float: left;
+		margin: 5px -5px 5px 25px;
+	}
+
+	input[type='checkbox'] {
+		clear: left;
+		margin: 10px 5px 25px 25px;
+	}
+
+	.copyright {
+		font-size: 0.8em;
+	}
 }
